--- a/compositionAPI/package.json
+++ b/compositionAPI/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test" : "jest"
   },
   "dependencies": {
     "vue": "^3.4.21",
@@ -14,6 +15,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "jest": "^29.7.0",
     "vite": "^5.2.0"
   }
 }
